Fixing a few issues identified by spotbugs